--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ a, button, .logo{
     cursor: pointer; /* Link Element Logo & Button --> Hand Currsor*/
 }
 
+button{
+    border-radius: 45px;
+}
+
 main{
     height: 100%;
     display: grid; /* Work on grid */
@@ -53,7 +57,8 @@ main{
 }
 
 header{
-    grid-column: 2 / span 6; /* header start 2nd column and others last column */
+    grid-column: 1 / span 7; /* header start 2nd column and others last column */
+    margin-left: 5%;
 }
 
 nav {
@@ -90,15 +95,20 @@ nav {
 
 .button_med:hover{
     color: var(--accentHover);
+    background-color: var(--light);
 }
 
 .info{
     grid-column: 3 / span 4;
-    margin-top: 23%;
+    margin-top: 22%;
     text-align: center;
 }
 
 .content_font1{
+    display: inline-block;
+}
+.content_font1{
+    grid-column: 3 / span 4;
     font-family: "Lato", sans-serif;
     color: rgb(199, 255, 249);
     font-size: 3.5rem;
@@ -112,4 +122,96 @@ nav {
 .icons{
     margin: 10%;
     display: flex;
+}
+
+.icon{
+    margin-right: 30px;
+}
+
+.icon img{
+    width: 60px;
+}
+
+.icon_info{
+    text-align: center;
+}
+
+.features{
+    margin-top: 5px;
+    grid-column: 2 / span 7;
+    background-color: #00B191;
+    /* top right bottom left*/
+    padding: 24px 33px 12px 33px;
+    display: flex;
+    align-items: left;
+}
+
+.feature {
+    display: flex;
+    /* top right bottom left */
+    margin: 0px 10px 30px 10px;
+}
+
+.feature img{
+    width: 100px;
+    height: 80;
+    margin-right: 20px;
+}
+
+.feature_info p{
+    color: black;
+}
+
+.feature_top, .feature_more{
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.feature_bottom{
+    font-size: 15px;
+    font-weight: normal;
+}
+
+.feature:nth-child(3){
+    align-self: flex-start;
+}
+
+.feature_more{
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.feature_more:hover{
+    color: var(--light);
+}
+
+/* Responsive Website */
+@media only screen and (max-width:1100px){
+    .icon img{
+        height: 400px;
+        width: auto;
+    }
+    .content_font1, .content_font2{
+        font-size: 2.75rem;
+    }
+    .feature{
+        grid-column: 1 / span 7;
+    }
+}
+
+@media only screen and (max-width:850px){
+    .info{
+        grid-column: 2 / span 7;
+    }
+    .icons{
+        flex-direction: column;
+    }
+    .content_font1, .content_font2{
+        font-size: 1.5rem;
+    }
+    .features{
+        flex-direction: column;
+    }
 }
