--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ nav {
 
 .feature img{
     width: 100px;
-    height: 80;
+    height: 80px;
     margin-right: 20px;
 }
 
@@ -189,8 +189,13 @@ nav {
 
 /* Responsive Website */
 @media only screen and (max-width:1100px){
+    .logo{
+        margin-right: 50px;
+        height: 30%;
+        width: auto;
+    }
     .icon img{
-        height: 400px;
+        height: 200px;
         width: auto;
     }
     .content_font1, .content_font2{
@@ -198,6 +203,11 @@ nav {
     }
     .feature{
         grid-column: 1 / span 7;
+    }
+    .feature img{
+        width: auto;
+        height: auto;
+        
     }
 }
 
@@ -208,10 +218,17 @@ nav {
     .icons{
         flex-direction: column;
     }
-    .content_font1, .content_font2{
-        font-size: 1.5rem;
+    .content_font1{
+        font-size: 50px;
+    }
+    .content_font2{
+        font-size: 20px;
     }
     .features{
         flex-direction: column;
+    }
+    .feature img{
+        width: 100px;
+        height: 80;
     }
 }
